listings/ch15-smart-pointers/listing-15-21/output.txt
$ cargo test
   Compiling limit-tracker v0.1.0 (file:///projects/limit-tracker)
error[E0596]: cannot borrow `self.sent_messages` as mutable, as it is behind a `&` reference
(エラー: `self.sent_messages`は`&`参照の後ろにあるので、可変として借用できません)
  --> src/lib.rs:58:13
   |
58 |             self.sent_messages.push(String::from(message));
   |             ^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |                               (`self`は`&`参照なので、それが参照するデータは可変として借用できません)
   |
help: consider changing this to be a mutable reference
(ヘルプ: 可変参照に変更することを検討してください)
   |
2  |     fn send(&mut self, msg: &str);
   |             ~~~~~~~~~

For more information about this error, try `rustc --explain E0596`.
error: could not compile `limit-tracker` (lib test) due to 1 previous error
